add fluent validation setup as mediatr pipeline behaviour (#64)
